--- a/booknow.html
+++ b/booknow.html
@@ -1,37 +1,54 @@
-<!-- booknow.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Book Now</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Book Your Trip</title>
   <link rel="stylesheet" href="booknow.css">
 </head>
 <body>
-  <div class="booking-container">
-    <h1>Book Your Adventure</h1>
-    <form id="booking-form">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" required>
+  <div class="booking-page">
+    
+    <div class="booking-header">
+      <h1>Plan Your Dream Trip</h1>
+      <p>Book your next adventure with us! Fill the form below to get started.</p>
+    </div>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
+    <div class="booking-content">
+      <div class="booking-image">
+        <img src="./assets/images/hero-banner.jpg" alt="Travel Image">
+         <div class="booking-quote">"Travel is the only thing you buy that makes you richer."</div>
+      </div>
 
-      <label for="destination">Destination:</label>
-      <select id="destination" required>
-        <option value="">Select</option>
-        <option value="karachi">Karachi</option>
-        <option value="murree">Murree</option>
-        <option value="gilgit">Gilgit</option>
-        <!-- Add more -->
-      </select>
+      <div class="form-container">
+        <form class="booking-form">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" name="name" required placeholder="John Doe">
 
-      <label for="date">Travel Date:</label>
-      <input type="date" id="date" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required placeholder="john@example.com">
 
-      <button type="submit">Submit Booking</button>
-    </form>
+          <label for="destination">Destination</label>
+          <input type="text" id="destination" name="destination" required placeholder="e.g. Maldives">
+
+          
+
+          <label for="checkin">Check-in Date</label>
+          <input type="date" id="checkin" name="checkin" required>
+
+          <label for="checkout">Check-out Date</label>
+          <input type="date" id="checkout" name="checkout" required>
+
+          <label for="people">Number of People</label>
+          <input type="number" id="people" name="people" required min="1" value="1">
+
+          <button type="submit">Book Now</button>
+        </form>
+      </div>
+    </div>
   </div>
 
-  <script src="booknow.js"></script>
+  <!-- JavaScript File -->
+  <script src="./booknow.js"></script>
 </body>
 </html>
