--- a/booknow.html
+++ b/booknow.html
@@ -21,12 +21,13 @@
       </div>
 
       <div class="form-container">
-        <form class="booking-form">
+        <form class="booking-form" action="booknow.php" method="POST">
+
           <label for="name">Full Name</label>
-          <input type="text" id="name" name="name" required placeholder="John Doe">
+          <input type="text" id="name" name="name" required placeholder="Your Name....">
 
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="john@example.com">
+          <input type="email" id="email" name="email" required placeholder="youremail@example.com">
 
           <label for="destination">Destination</label>
           <input type="text" id="destination" name="destination" required placeholder="e.g. Maldives">
