--- a/booknow.html
+++ b/booknow.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="form-container">
-        <form class="booking-form" action="booknow.php" method="POST">
+        <form class="booking-form" action="http://localhost/Tourly/booknow.php" method="POST">
 
           <label for="name">Full Name</label>
           <input type="text" id="name" name="name" required placeholder="Your Name....">
