added php and javascript

--- a/booknow.html
+++ b/booknow.html
@@ -24,24 +24,24 @@
         <form class="booking-form" action="http://localhost/Tourly/booknow.php" method="POST">
 
           <label for="name">Full Name</label>
-          <input type="text" id="name" name="name" required placeholder="Your Name....">
+          <input type="text" id="name" name="name"  placeholder="Your Name....">
 
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="youremail@example.com">
+          <input type="email" id="email" name="email"  placeholder="youremail@example.com">
 
           <label for="destination">Destination</label>
-          <input type="text" id="destination" name="destination" required placeholder="e.g. Maldives">
+          <input type="text" id="destination" name="destination"  placeholder="e.g. Maldives">
 
           
 
           <label for="checkin">Check-in Date</label>
-          <input type="date" id="checkin" name="checkin" required>
+          <input type="date" id="checkin" name="checkin">
 
           <label for="checkout">Check-out Date</label>
-          <input type="date" id="checkout" name="checkout" required>
+          <input type="date" id="checkout" name="checkout" >
 
           <label for="people">Number of People</label>
-          <input type="number" id="people" name="people" required min="1" value="1">
+          <input type="number" id="people" name="people"  value="1">
 
           <button type="submit">Book Now</button>
         </form>
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <!-- JavaScript File -->
+  
   <script src="./booknow.js"></script>
 </body>
 </html>
