--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="./form.html">About Us</a></li>
+           
             <li><a href="#DESTINATION">Destination</a></li>
             <li><a href="#PACKAGES">Packages</a></li>
             <li><a href="#GALLERY">Gallery</a></li>
@@ -37,7 +37,7 @@
               habitant? Fames, vivamus minim nemo enim, gravida lobortis quasi, eum.
             </p>
             <div class="hero-buttons">
-              <a href="#" class="btn btn-blue">Learn More</a>
+              <a href="././learnmore.html" class="btn btn-blue">Learn More</a>
               <a href="./booknow.html" target="_blank" class="btn btn-outline">Book Now</a>
             </div>
           </div>
