updated learn more button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               habitant? Fames, vivamus minim nemo enim, gravida lobortis quasi, eum.
             </p>
             <div class="hero-buttons">
-              <a href="././learnmore.html" class="btn btn-blue">Learn More</a>
+              <a href="././learnmore.html" target="_blank" class="btn btn-blue">Learn More</a>
               <a href="./booknow.html" target="_blank" class="btn btn-outline">Book Now</a>
             </div>
           </div>
