--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
         <div class="gallery-grid">
           <img src="./assets/images/gallery-1.jpg" alt="Traveler 1" class="gallery-item">
           <img src="./assets/images/gallery-2.jpg" alt="Traveler 2" class="gallery-item">
-          <img src="./assets/images/gallery-3.jpg" alt="Traveler 3" class="gallery-item">
-          <img src="./assets/images/gallery-4.jpg" alt="Traveler 4" class="gallery-item">
+          <img src="./assets/images/WhatsApp Image 2025-05-13 at 11.42.02_dc1c42af.jpg" alt="Traveler 3" class="gallery-item">
+          <img src="./assets/images/WhatsApp Image 2025-05-13 at 11.43.02_13f24eef.jpg" alt="Traveler 4" class="gallery-item">
           <img src="./assets/images/gallery-5.jpg" alt="Traveler 5" class="gallery-item">
         </div>
       </section>
