--- a/more.html
+++ b/more.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <title>More Destinations</title>
   <link rel="stylesheet" href="more.css"> 
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
-  
+ 
     
 </head>
 <body>
 
   <div class="popular-destinations-container">
-    <h2 class="section-title">MORE DESTINATIONS</h2>
-    <p class="section-subtitle">Explore more amazing places to travel.</p>
+    <h2 class="section-title" data-aos="fade-down">MORE DESTINATIONS</h2>
+    <p class="section-subtitle" data-aos="fade-up">Explore more amazing places to travel.</p>
 
     <div class="destinations-grid">
 
       <!-- Destination 1 -->
-      <div class="destination-card">
+      <div class="destination-card" data-aos="fade-right">
         <div class="destination-image-container">
           <img src="./assets/images/popular-3.jpg" alt="Tokyo" class="destination-image">
         </div>
@@ -31,7 +33,7 @@
       </div>
 
       <!-- Destination 2 -->
-      <div class="destination-card">
+      <div class="destination-card" data-aos="fade-up">
         <div class="destination-image-container">
           <img src="./assets/images/popular-1.jpg" alt="Paris" class="destination-image">
         </div>
@@ -45,7 +47,7 @@
       </div>
 
       <!-- Destination 3 -->
-      <div class="destination-card">
+      <div class="destination-card" data-aos="fade-down">
         <div class="destination-image-container">
           <img src="./assets/images/popular-2.jpg" alt="Bali" class="destination-image">
         </div>
@@ -59,7 +61,7 @@
       </div>
 
     <!-- Destination 4 -->
-<div class="destination-card">
+<div class="destination-card" data-aos="fade-left">
     <div class="destination-image-container">
       <img src="./assets/images/popular-2.jpg" alt="New York" class="destination-image">
     </div>
@@ -73,7 +75,7 @@
   </div>
   
   <!-- Destination 5 -->
-  <div class="destination-card">
+  <div class="destination-card" data-aos="fade-up">
     <div class="destination-image-container">
       <img src="./assets/images/popular-2.jpg" alt="London" class="destination-image">
     </div>
@@ -87,7 +89,7 @@
   </div>
   
   <!-- Destination 6 -->
-  <div class="destination-card">
+  <div class="destination-card" data-aos="fade-up">
     <div class="destination-image-container">
       <img src="./assets/images/popular-3.jpg" alt="Istanbul" class="destination-image">
     </div>
@@ -101,7 +103,7 @@
   </div>
   
   <!-- Destination 7 -->
-  <div class="destination-card">
+  <div class="destination-card" data-aos="fade-down">
     <div class="destination-image-container">
       <img src="./assets/images/popular-2.jpg" alt="Maldives" class="destination-image">
     </div>
@@ -116,7 +118,7 @@
   
   <!-- Destination 8 -->
   <div class="destination-card">
-    <div class="destination-image-container">
+    <div class="destination-image-container" data-aos="fade-left">
       <img src="./assets/images/popular-1.jpg" alt="Sydney" class="destination-image">
     </div>
     <div class="destination-info">
@@ -132,6 +134,14 @@
 
     </div>
   </div>
+
+  <script>
+   AOS.init({
+  duration: 1400,
+  once: false,
+  mirror: true
+});
+ </script>
 
 </body>
 </html>
