--- a/more.html
+++ b/more.html
@@ -5,10 +5,7 @@
   <title>More Destinations</title>
   <link rel="stylesheet" href="more.css"> 
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-
- 
-    
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 </head>
 <body>
 
@@ -28,7 +25,7 @@
           <h3 class="destination-name">TOKYO</h3>
           <p class="destination-description">Modern meets tradition in this amazing city.</p>
           <div class="destination-rating">★★★★★</div>
-          <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
+          <a href="./booknow.html?destination=Tokyo"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
 
@@ -42,7 +39,7 @@
           <h3 class="destination-name">PARIS</h3>
           <p class="destination-description">The city of lights and love.</p>
           <div class="destination-rating">★★★★★</div>
-          <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
+          <a href="./booknow.html?destination=Paris"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
 
@@ -56,92 +53,91 @@
           <h3 class="destination-name">BALI</h3>
           <p class="destination-description">Relax at the most beautiful beaches.</p>
           <div class="destination-rating">★★★★★</div>
-          <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
+          <a href="./booknow.html?destination=Bali"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
 
-    <!-- Destination 4 -->
-<div class="destination-card" data-aos="fade-left">
-    <div class="destination-image-container">
-      <img src="./assets/images/popular-2.jpg" alt="New York" class="destination-image">
-    </div>
-    <div class="destination-info">
-      <div class="destination-country">USA</div>
-      <h3 class="destination-name">NEW YORK</h3>
-      <p class="destination-description">The city that never sleeps.</p>
-      <div class="destination-rating">★★★★☆</div>
-      <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
-    </div>
-  </div>
-  
-  <!-- Destination 5 -->
-  <div class="destination-card" data-aos="fade-up">
-    <div class="destination-image-container">
-      <img src="./assets/images/popular-2.jpg" alt="London" class="destination-image">
-    </div>
-    <div class="destination-info">
-      <div class="destination-country">UK</div>
-      <h3 class="destination-name">LONDON</h3>
-      <p class="destination-description">A perfect mix of modern and historic sights.</p>
-      <div class="destination-rating">★★★★★</div>
-      <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
-    </div>
-  </div>
-  
-  <!-- Destination 6 -->
-  <div class="destination-card" data-aos="fade-up">
-    <div class="destination-image-container">
-      <img src="./assets/images/popular-3.jpg" alt="Istanbul" class="destination-image">
-    </div>
-    <div class="destination-info">
-      <div class="destination-country">TURKEY</div>
-      <h3 class="destination-name">ISTANBUL</h3>
-      <p class="destination-description">A magical city bridging two continents.</p>
-      <div class="destination-rating">★★★★★</div>
-      <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
-    </div>
-  </div>
-  
-  <!-- Destination 7 -->
-  <div class="destination-card" data-aos="fade-down">
-    <div class="destination-image-container">
-      <img src="./assets/images/popular-2.jpg" alt="Maldives" class="destination-image">
-    </div>
-    <div class="destination-info">
-      <div class="destination-country">MALDIVES</div>
-      <h3 class="destination-name">MALDIVES</h3>
-      <p class="destination-description">Luxury and serenity on ocean waves.</p>
-      <div class="destination-rating">★★★★★</div>
-      <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
-    </div>
-  </div>
-  
-  <!-- Destination 8 -->
-  <div class="destination-card">
-    <div class="destination-image-container" data-aos="fade-left">
-      <img src="./assets/images/popular-1.jpg" alt="Sydney" class="destination-image">
-    </div>
-    <div class="destination-info">
-      <div class="destination-country">AUSTRALIA</div>
-      <h3 class="destination-name">SYDNEY</h3>
-      <p class="destination-description">Visit the iconic Opera House and beaches.</p>
-      <div class="destination-rating">★★★★☆</div>
-      <a href="./booknow.html"><button class="book-now-button">Book Now</button></a>
-    </div>
-  </div>
-  
+      <!-- Destination 4 -->
+      <div class="destination-card" data-aos="fade-left">
+        <div class="destination-image-container">
+          <img src="./assets/images/popular-2.jpg" alt="New York" class="destination-image">
+        </div>
+        <div class="destination-info">
+          <div class="destination-country">USA</div>
+          <h3 class="destination-name">NEW YORK</h3>
+          <p class="destination-description">The city that never sleeps.</p>
+          <div class="destination-rating">★★★★☆</div>
+          <a href="./booknow.html?destination=New%20York"><button class="book-now-button">Book Now</button></a>
+        </div>
+      </div>
 
+      <!-- Destination 5 -->
+      <div class="destination-card" data-aos="fade-up">
+        <div class="destination-image-container">
+          <img src="./assets/images/popular-2.jpg" alt="London" class="destination-image">
+        </div>
+        <div class="destination-info">
+          <div class="destination-country">UK</div>
+          <h3 class="destination-name">LONDON</h3>
+          <p class="destination-description">A perfect mix of modern and historic sights.</p>
+          <div class="destination-rating">★★★★★</div>
+          <a href="./booknow.html?destination=London"><button class="book-now-button">Book Now</button></a>
+        </div>
+      </div>
+
+      <!-- Destination 6 -->
+      <div class="destination-card" data-aos="fade-up">
+        <div class="destination-image-container">
+          <img src="./assets/images/popular-3.jpg" alt="Istanbul" class="destination-image">
+        </div>
+        <div class="destination-info">
+          <div class="destination-country">TURKEY</div>
+          <h3 class="destination-name">ISTANBUL</h3>
+          <p class="destination-description">A magical city bridging two continents.</p>
+          <div class="destination-rating">★★★★★</div>
+          <a href="./booknow.html?destination=Istanbul"><button class="book-now-button">Book Now</button></a>
+        </div>
+      </div>
+
+      <!-- Destination 7 -->
+      <div class="destination-card" data-aos="fade-down">
+        <div class="destination-image-container">
+          <img src="./assets/images/popular-2.jpg" alt="Maldives" class="destination-image">
+        </div>
+        <div class="destination-info">
+          <div class="destination-country">MALDIVES</div>
+          <h3 class="destination-name">MALDIVES</h3>
+          <p class="destination-description">Luxury and serenity on ocean waves.</p>
+          <div class="destination-rating">★★★★★</div>
+          <a href="./booknow.html?destination=Maldives"><button class="book-now-button">Book Now</button></a>
+        </div>
+      </div>
+
+      <!-- Destination 8 -->
+      <div class="destination-card">
+        <div class="destination-image-container" data-aos="fade-left">
+          <img src="./assets/images/popular-1.jpg" alt="Sydney" class="destination-image">
+        </div>
+        <div class="destination-info">
+          <div class="destination-country">AUSTRALIA</div>
+          <h3 class="destination-name">SYDNEY</h3>
+          <p class="destination-description">Visit the iconic Opera House and beaches.</p>
+          <div class="destination-rating">★★★★☆</div>
+          <a href="./booknow.html?destination=Sydney"><button class="book-now-button">Book Now</button></a>
+        </div>
+      </div>
 
     </div>
   </div>
 
   <script>
-   AOS.init({
-  duration: 1400,
-  once: false,
-  mirror: true
-});
- </script>
+    AOS.init({
+      duration: 1400,
+      once: false,
+      mirror: true
+    });
+  </script>
+  <script src="./booknow.js"></script>
 
 </body>
 </html>
