updated learnmore section and form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAY2VANDAR</title>
+    <title>TOURLY</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./assets/images/logo-blue.svg" sizes="32x32" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
