--- a/learnmore.html
+++ b/learnmore.html
@@ -15,13 +15,13 @@
 
     <!-- Learn More Section -->
     <section class="learn-more-section">
-        <h1>Welcome to WAY2VANDAR</h1>
+        <h1>Welcome to TOURLY</h1>
         <p>We are a global travel service offering a wide range of destinations and vacation packages designed to make your travels unforgettable. Explore new places, discover unique experiences, and book your next adventure with us!</p>
 
         <!-- About Us Section -->
         <div class="about-us">
             <h2>About Us</h2>
-            <p>WAY2VANDAR is your go-to platform for booking dream vacations. Whether you're looking for adventure, relaxation, or cultural exploration, we offer curated packages that suit all kinds of travelers. Our mission is to help you create lifelong memories with seamless bookings, amazing destinations, and personalized services.</p>
+            <p>Tourly is your go-to platform for booking dream vacations. Whether you're looking for adventure, relaxation, or cultural exploration, we offer curated packages that suit all kinds of travelers. Our mission is to help you create lifelong memories with seamless bookings, amazing destinations, and personalized services.</p>
         </div>
 
         <!-- How It Works Section -->
@@ -74,7 +74,7 @@
             </div>
             <div class="footer-column">
                 <h4>Contact Us</h4>
-                <p>Email: info@way2vandar.com</p>
+                <p>Email: info@tourly.com</p>
                 <p>Phone: +01 (123) 4567 890</p>
             </div>
         </div>
