--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <h3 class="destination-name">SAN MIGUEL</h3>
           <p class="destination-description">Explore the charming streets, ancient architecture, and rich Italian culture in the heart of San Miguel..</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$699/PERSON</div>
           <a href="./booknow.html?destination=San%20Miguel" target="_blank"><button class="book-now-button">Book
               Now</button></a>
         </div>
@@ -118,6 +119,7 @@
           <h3 class="destination-name">BURJ KHALIFA</h3>
           <p class="destination-description">destination-description">Stand atop the world’s tallest building and witness the breathtaking skyline of futuristic Dubai.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$999/PERSON</div>
           <a href="./booknow.html?destination=Burj%20Khalifa" target="_blank"><button class="book-now-button">Book
               Now</button></a>
         </div>
@@ -132,6 +134,7 @@
           <h3 class="destination-name">KYOTO TEMPLE</h3>
           <p class="destination-description">Step into the serenity of Kyoto’s historic temples, where tradition and nature live in perfect harmony.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$799/PERSON</div>
           <a href="./booknow.html?destination=Kyoto%20Temple" target="_blank"><button class="book-now-button">Book
               Now</button></a>
         </div>
