--- a/more.html
+++ b/more.html
@@ -25,6 +25,7 @@
           <h3 class="destination-name">TOKYO</h3>
           <p class="destination-description">Modern meets tradition in this amazing city.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$590/PERSON</div>
           <a href="./booknow.html?destination=Tokyo"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -39,6 +40,7 @@
           <h3 class="destination-name">PARIS</h3>
           <p class="destination-description">The city of lights and love.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$670/PERSON</div>
           <a href="./booknow.html?destination=Paris"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -53,6 +55,7 @@
           <h3 class="destination-name">BALI</h3>
           <p class="destination-description">Relax at the most beautiful beaches.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$950/PERSON</div>
           <a href="./booknow.html?destination=Bali"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -67,6 +70,7 @@
           <h3 class="destination-name">NEW YORK</h3>
           <p class="destination-description">The city that never sleeps.</p>
           <div class="destination-rating">★★★★☆</div>
+          <div class="destination-price">$999/PERSON</div>
           <a href="./booknow.html?destination=New%20York"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -81,6 +85,7 @@
           <h3 class="destination-name">LONDON</h3>
           <p class="destination-description">A perfect mix of modern and historic sights.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$999/PERSON</div>
           <a href="./booknow.html?destination=London"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -95,6 +100,7 @@
           <h3 class="destination-name">ISTANBUL</h3>
           <p class="destination-description">A magical city bridging two continents.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$500/PERSON</div>
           <a href="./booknow.html?destination=Istanbul"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
@@ -109,13 +115,14 @@
           <h3 class="destination-name">MALDIVES</h3>
           <p class="destination-description">Luxury and serenity on ocean waves.</p>
           <div class="destination-rating">★★★★★</div>
+          <div class="destination-price">$799/PERSON</div>
           <a href="./booknow.html?destination=Maldives"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
 
       <!-- Destination 8 -->
-      <div class="destination-card">
-        <div class="destination-image-container" data-aos="fade-left">
+      <div class="destination-card" data-aos="fade-left">
+        <div class="destination-image-container" >
           <img src="./assets/images/popular-1.jpg" alt="Sydney" class="destination-image">
         </div>
         <div class="destination-info">
@@ -123,6 +130,7 @@
           <h3 class="destination-name">SYDNEY</h3>
           <p class="destination-description">Visit the iconic Opera House and beaches.</p>
           <div class="destination-rating">★★★★☆</div>
+          <div class="destination-price">$860/PERSON</div>
           <a href="./booknow.html?destination=Sydney"><button class="book-now-button">Book Now</button></a>
         </div>
       </div>
